[MODEXPS-42] - Update schedule schema and refactor